// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Basic Error Object 1`] = `
Object {
  "err": Object {
    "debug": "wooyeah",
    "message": "hallo",
    "stack": "Error: hallo
    at Object.<anonymous> (/srv/test/__tests__/index.test.ts:12:32)
    at Promise.then.completed (/srv/test/node_modules/jest-circus/build/utils.js:390:28)",
    "type": "Error",
  },
  "hostname": "testhost",
  "level": 50,
  "msg": "hallo",
  "pid": 1337,
  "time": 1234567890000,
}
`;

exports[`Basic Error Object serialized on non-error level 1`] = `
Object {
  "err": Object {
    "message": "hallo",
    "stack": "Error: hallo
    at Object.<anonymous> (/srv/test/__tests__/index.test.ts:18:17)
    at Promise.then.completed (/srv/test/node_modules/jest-circus/build/utils.js:390:28)",
    "type": "Error",
  },
  "hostname": "testhost",
  "level": 30,
  "msg": "hallo",
  "pid": 1337,
  "time": 1234567890000,
}
`;

exports[`Basic Mixins basic + accum 1`] = `
Object {
  "accum": Object {
    "logger": Object {
      "go": "log",
    },
    "luger": Object {
      "go": "bang",
    },
  },
  "caller": "",
  "hostname": "testhost",
  "level": 40,
  "logger": Object {
    "go": "log",
  },
  "luger": Object {
    "go": "bang",
  },
  "msg": "hello",
  "pid": 1337,
  "time": 1234567890000,
}
`;

exports[`Basic Mixins property overwrite 1`] = `
Object {
  "caller": "",
  "hostname": "testhost",
  "level": 40,
  "logger": Object {
    "go": "brrr",
  },
  "msg": "hello",
  "pid": 1337,
  "time": 1234567890000,
}
`;

exports[`Basic Object + String = Format 1`] = `
Object {
  "hostname": "testhost",
  "level": 40,
  "msg": "hello",
  "omg": true,
  "pid": 1337,
  "time": 1234567890000,
}
`;

exports[`Basic Object 1`] = `
Object {
  "hostname": "testhost",
  "level": 40,
  "omg": true,
  "pid": 1337,
  "time": 1234567890000,
}
`;

exports[`Basic Object, String Format, String 1`] = `
Object {
  "hostname": "testhost",
  "level": 40,
  "msg": "hello world",
  "omg": true,
  "pid": 1337,
  "time": 1234567890000,
}
`;

exports[`Basic Object, String Format, String 2`] = `
Object {
  "hostname": "testhost",
  "level": 40,
  "msg": "hello world:and 123",
  "omg": true,
  "pid": 1337,
  "time": 1234567890000,
}
`;

exports[`Basic String Format, Object 1`] = `
Object {
  "hostname": "testhost",
  "level": 40,
  "msg": "hello {\\"omg\\":true}",
  "pid": 1337,
  "time": 1234567890000,
}
`;

exports[`Basic String, Object 1`] = `
Object {
  "hostname": "testhost",
  "level": 40,
  "msg": "hello",
  "pid": 1337,
  "time": 1234567890000,
}
`;

exports[`Basic Trace Caller Force (production) 1`] = `
Object {
  "caller": "",
  "hostname": "testhost",
  "level": 40,
  "msg": "hello",
  "pid": 1337,
  "time": 1234567890000,
}
`;
